72. Check input/output shapes of classification model

--- a/02_neural_network_classification_with_tensorflow.ipynb
+++ b/02_neural_network_classification_with_tensorflow.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "02_neural_network_classification_with_tensorflow",
       "provenance": [],
-      "authorship_tag": "ABX9TyOBlwADgANaDy6dGUE9R/D8",
+      "authorship_tag": "ABX9TyN6UprGeYajqjvTmzPX63le",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -94,11 +94,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5CEw_wbW_eP4",
-        "outputId": "216cf02a-3e5a-440b-c204-fbbf40d014b6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "5CEw_wbW_eP4",
+        "outputId": "216cf02a-3e5a-440b-c204-fbbf40d014b6"
       },
       "source": [
         "# Check the features\n",
@@ -129,11 +129,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZZFSg561_gNl",
-        "outputId": "197d6211-912f-43ee-d539-8d9184077795",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ZZFSg561_gNl",
+        "outputId": "197d6211-912f-43ee-d539-8d9184077795"
       },
       "source": [
         "# Check the labels\n",
@@ -158,12 +158,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DumInckN_tQM",
-        "outputId": "ffaf22cd-e4ed-49c0-a13f-d5d054e81876",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 419
-        }
+        },
+        "id": "DumInckN_tQM",
+        "outputId": "ffaf22cd-e4ed-49c0-a13f-d5d054e81876"
       },
       "source": [
         "## Our data is a a little hard to understand right now... let's visualize it!\n",
@@ -299,12 +299,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "C76qbFimAki6",
-        "outputId": "298dc201-66a4-4a0c-90da-fc7b1255008c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 282
-        }
+        },
+        "id": "C76qbFimAki6",
+        "outputId": "298dc201-66a4-4a0c-90da-fc7b1255008c"
       },
       "source": [
         "# Visualize it with a plot\n",
@@ -347,8 +347,137 @@
         "id": "l-WONzecBFmi"
       },
       "source": [
-        "***Resources***[https://playground.tensorflow.org/](https://playground.tensorflow.org/)"
+        "***Resources***  Before pushing forward, spend 10-minutes playing around with [https://playground.tensorflow.org/](https://playground.tensorflow.org/).\n",
+        "See what happens when you change different hyperparameters."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "79ZB7SP5DCgd"
+      },
+      "source": [
+        "##Input and Output shapes"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EJyD58jdDIFW",
+        "outputId": "10c21535-2f00-45a5-d174-8f6ca4678200",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Check the shapes of our features and labels.\n",
+        "\n",
+        "X.shape, y.shape"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((1000, 2), (1000,))"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9i_rmCKwDOAD",
+        "outputId": "b88e9abd-a396-42ac-db32-143071f6f360",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# How many samples we're working\n",
+        "len(X), len(y)"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1000, 1000)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Cr20Li8jDVYR",
+        "outputId": "2a385dd1-3a7b-4cff-cd09-2f9c192d29dd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# View tht first example of features and labels\n",
+        "X[0], y[0]"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(array([0.75424625, 0.23148074]), 1)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VA3HPECCDh-b"
+      },
+      "source": [
+        "## Steps in modelling"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ubwAfxxIDkd5"
+      },
+      "source": [
+        "import tensorflow as tf\n"
+      ],
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IhqmK-TVDwZ-"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
