--- a/02_neural_network_classification_with_tensorflow.ipynb
+++ b/02_neural_network_classification_with_tensorflow.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "02_neural_network_classification_with_tensorflow",
       "provenance": [],
-      "authorship_tag": "ABX9TyN6UprGeYajqjvTmzPX63le",
+      "authorship_tag": "ABX9TyNrzW47+5WE0ZT11Uy69Jwk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -14,8 +14,7 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -88,7 +87,7 @@
         "                    noise=0.03, \n",
         "                    random_state=42)\n"
       ],
-      "execution_count": 6,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -98,13 +97,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5CEw_wbW_eP4",
-        "outputId": "216cf02a-3e5a-440b-c204-fbbf40d014b6"
+        "outputId": "0d0a531e-4450-4083-fda4-05066c556441"
       },
       "source": [
         "# Check the features\n",
         "X"
       ],
-      "execution_count": 7,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -122,7 +121,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 2
         }
       ]
     },
@@ -133,13 +132,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZZFSg561_gNl",
-        "outputId": "197d6211-912f-43ee-d539-8d9184077795"
+        "outputId": "ca743526-976f-4314-a00f-d1e6cb026716"
       },
       "source": [
         "# Check the labels\n",
         "y[:10]"
       ],
-      "execution_count": 8,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -151,7 +150,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 3
         }
       ]
     },
@@ -163,7 +162,7 @@
           "height": 419
         },
         "id": "DumInckN_tQM",
-        "outputId": "ffaf22cd-e4ed-49c0-a13f-d5d054e81876"
+        "outputId": "0f8697da-c587-46fa-e5b9-e8e770b8d46b"
       },
       "source": [
         "## Our data is a a little hard to understand right now... let's visualize it!\n",
@@ -171,7 +170,7 @@
         "circles = pd.DataFrame({\"X0\": X[:, 0], \"X1\": X[:, 1], \"label\" : y})\n",
         "circles"
       ],
-      "execution_count": 12,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -292,7 +291,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 4
         }
       ]
     },
@@ -304,7 +303,7 @@
           "height": 282
         },
         "id": "C76qbFimAki6",
-        "outputId": "298dc201-66a4-4a0c-90da-fc7b1255008c"
+        "outputId": "f95c2d37-6b7e-40bb-9537-c74e4a09f790"
       },
       "source": [
         "# Visualize it with a plot\n",
@@ -312,19 +311,19 @@
         "import matplotlib.pyplot as plt\n",
         "plt.scatter(X[:, 0], X[:, 1], c=y, cmap=plt.cm.RdYlBu)"
       ],
-      "execution_count": 14,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.collections.PathCollection at 0x7f85f7911d90>"
+              "<matplotlib.collections.PathCollection at 0x7f2fd3404cd0>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 14
+          "execution_count": 5
         },
         {
           "output_type": "display_data",
@@ -363,18 +362,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EJyD58jdDIFW",
-        "outputId": "10c21535-2f00-45a5-d174-8f6ca4678200",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "EJyD58jdDIFW",
+        "outputId": "fd459b80-d538-4b5e-9bf8-c147b7c62d44"
       },
       "source": [
         "# Check the shapes of our features and labels.\n",
         "\n",
         "X.shape, y.shape"
       ],
-      "execution_count": 15,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -386,24 +385,24 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 15
+          "execution_count": 6
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9i_rmCKwDOAD",
-        "outputId": "b88e9abd-a396-42ac-db32-143071f6f360",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9i_rmCKwDOAD",
+        "outputId": "588f0c29-c738-462f-aa26-c0ba719bf50a"
       },
       "source": [
         "# How many samples we're working\n",
         "len(X), len(y)"
       ],
-      "execution_count": 17,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -415,24 +414,24 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 17
+          "execution_count": 7
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Cr20Li8jDVYR",
-        "outputId": "2a385dd1-3a7b-4cff-cd09-2f9c192d29dd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Cr20Li8jDVYR",
+        "outputId": "a0553ac2-5c67-4b48-f4c1-a1cb0fa117c1"
       },
       "source": [
         "# View tht first example of features and labels\n",
         "X[0], y[0]"
       ],
-      "execution_count": 21,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -444,7 +443,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 21
+          "execution_count": 8
         }
       ]
     },
@@ -454,7 +453,16 @@
         "id": "VA3HPECCDh-b"
       },
       "source": [
-        "## Steps in modelling"
+        "## Steps in modelling\n",
+        "\n",
+        "The steps in modelling with Tensorflow are typically :\n",
+        "\n",
+        "1. Create or import a model\n",
+        "2. Compile the model\n",
+        "3. Fit the model\n",
+        "4. Evaluate the model\n",
+        "5. Tweak\n",
+        "6. Evaluate ..."
       ]
     },
     {
@@ -465,19 +473,205 @@
       "source": [
         "import tensorflow as tf\n"
       ],
-      "execution_count": 22,
+      "execution_count": 9,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "IhqmK-TVDwZ-"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IhqmK-TVDwZ-",
+        "outputId": "af62e733-81c4-4d5e-ead8-46975b9cb3b5"
       },
       "source": [
-        ""
+        "# Set the random seed\n",
+        "tf.random.set_seed(42)\n",
+        "\n",
+        "# 1. Create the model using Sequential API\n",
+        "model_1 = tf.keras.Sequential([\n",
+        "      tf.keras.layers.Dense(1)\n",
+        "])\n",
+        "\n",
+        "#2. Compile the model\n",
+        "model_1.compile(loss=tf.keras.losses.BinaryCrossentropy(),\n",
+        "              optimizer = tf.keras.optimizers.SGD(),\n",
+        "              metrics=[\"accuracy\"])\n",
+        "\n",
+        "#3. Fit the model\n",
+        "model_1.fit(X, y, epochs=5)\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/5\n",
+            "32/32 [==============================] - 0s 842us/step - loss: 2.8544 - accuracy: 0.4600\n",
+            "Epoch 2/5\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 0.7131 - accuracy: 0.5430\n",
+            "Epoch 3/5\n",
+            "32/32 [==============================] - 0s 834us/step - loss: 0.6973 - accuracy: 0.5090\n",
+            "Epoch 4/5\n",
+            "32/32 [==============================] - 0s 785us/step - loss: 0.6950 - accuracy: 0.5010\n",
+            "Epoch 5/5\n",
+            "32/32 [==============================] - 0s 875us/step - loss: 0.6942 - accuracy: 0.4830\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tensorflow.python.keras.callbacks.History at 0x7f2f94176d90>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QBodTmFgwaDy",
+        "outputId": "4a4b3249-b3e9-4b62-8089-52dd51f67604",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Let's try and impove by training for longer...\n",
+        "\n",
+        "model_1.fit(X, y, epochs=200, verbose=0)\n",
+        "\n",
+        "model_1.evaluate(X, y)"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "32/32 [==============================] - 0s 695us/step - loss: 0.6935 - accuracy: 0.5000\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.6934829950332642, 0.5]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tce-80Plw1La"
+      },
+      "source": [
+        "Since we're working on a binary classification problem and our mdoel is getting around ~50% accuracy... it's performing as if it's guessing.\n",
+        "\n",
+        "So let's step things up a notch and add an extra layer."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UAoO_ghLxJnq",
+        "outputId": "8a9ddaae-abd6-46a2-8416-8f0bf32a93d9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Set the random seet\n",
+        "tf.random.set_seed(42)\n",
+        "\n",
+        "#1. Create a model, with extra layer\n",
+        "model_2 = tf.keras.Sequential([\n",
+        "          tf.keras.layers.Dense(1),\n",
+        "          tf.keras.layers.Dense(1)                     \n",
+        "])\n",
+        "\n",
+        "#2. Compile the model\n",
+        "model_2.compile(loss=tf.keras.losses.BinaryCrossentropy(),\n",
+        "                optimizer=tf.keras.optimizers.SGD(),\n",
+        "                metrics=[\"accuracy\"]\n",
+        "                )\n",
+        "\n",
+        "#3. Fit the model\n",
+        "model_2.fit(X, y, epochs=100, verbose=0)"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tensorflow.python.keras.callbacks.History at 0x7f2f94200390>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "s2CxmlDIx8gM",
+        "outputId": "a86e6124-a59c-40b1-b2e7-f1062dedcc92",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#4. Evaluate the model\n",
+        "model_2.evaluate(X, y)"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "32/32 [==============================] - 0s 783us/step - loss: 0.6933 - accuracy: 0.5000\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.6933314800262451, 0.5]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NYbHdKn_yI3m"
+      },
+      "source": [
+        "## Improving our model"
+      ]
     }
   ]
 }
