74. Trying to improve our not very good classification model

--- a/02_neural_network_classification_with_tensorflow.ipynb
+++ b/02_neural_network_classification_with_tensorflow.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "02_neural_network_classification_with_tensorflow",
       "provenance": [],
-      "authorship_tag": "ABX9TyNrzW47+5WE0ZT11Uy69Jwk",
+      "authorship_tag": "ABX9TyOYeNauP+nSkCtK4k6IuUsy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -537,11 +537,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QBodTmFgwaDy",
-        "outputId": "4a4b3249-b3e9-4b62-8089-52dd51f67604",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "QBodTmFgwaDy",
+        "outputId": "4a4b3249-b3e9-4b62-8089-52dd51f67604"
       },
       "source": [
         "# Let's try and impove by training for longer...\n",
@@ -587,11 +587,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UAoO_ghLxJnq",
-        "outputId": "8a9ddaae-abd6-46a2-8416-8f0bf32a93d9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "UAoO_ghLxJnq",
+        "outputId": "8a9ddaae-abd6-46a2-8416-8f0bf32a93d9"
       },
       "source": [
         "# Set the random seet\n",
@@ -631,11 +631,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "s2CxmlDIx8gM",
-        "outputId": "a86e6124-a59c-40b1-b2e7-f1062dedcc92",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "s2CxmlDIx8gM",
+        "outputId": "a86e6124-a59c-40b1-b2e7-f1062dedcc92"
       },
       "source": [
         "#4. Evaluate the model\n",
@@ -670,8 +670,104 @@
         "id": "NYbHdKn_yI3m"
       },
       "source": [
-        "## Improving our model"
+        "## Improving our model\n",
+        "\n",
+        "Let's look into our bag of tricks to see how we can improve our model.\n",
+        "\n",
+        "1. Create a model -- we might want to add more layers or increase the number of hidden units within a layer.\n",
+        "2. Compile the model -- choose diff optimization function such as Adam\n",
+        "3. Fitting a model -- perhaps we might fit our model for more epochs (leave it training for longer)."
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rGex0iQOzKMH",
+        "outputId": "34e04a83-5f98-46bf-9cb7-c16fa7f80458",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Set the random seed\n",
+        "tf.random.set_seed(42)\n",
+        "\n",
+        "#1. Create a model (this time 3)\n",
+        "model_3 = tf.keras.Sequential([\n",
+        "   tf.keras.layers.Dense(100),\n",
+        "   tf.keras.layers.Dense(10),\n",
+        "   tf.keras.layers.Dense(1)                            \n",
+        "])\n",
+        "\n",
+        "#2. Compile the model\n",
+        "model_3.compile(loss = tf.keras.losses.BinaryCrossentropy(),\n",
+        "                optimizer = tf.keras.optimizers.Adam(),\n",
+        "                metrics=[\"accuracy\"])\n",
+        "#3. Fit the model\n",
+        "model_3.fit(X, y, epochs=100, verbose=0)\n"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tensorflow.python.keras.callbacks.History at 0x7f2f8d68a290>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MUcZCHIe0wD0",
+        "outputId": "8fdca8cc-3d72-4d61-9190-7dfb796435c5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#4. Evaluate\n",
+        "model_3.evaluate(X, y)"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "32/32 [==============================] - 0s 724us/step - loss: 0.6980 - accuracy: 0.5080\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.6980254054069519, 0.5080000162124634]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "taIZ5Val01f1"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
