78. Non-linearity part 2: Building our first neural network with non-linearity

--- a/02_neural_network_classification_with_tensorflow.ipynb
+++ b/02_neural_network_classification_with_tensorflow.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "02_neural_network_classification_with_tensorflow",
       "provenance": [],
-      "authorship_tag": "ABX9TyMi/vJn1vOW1TwrW+pq9Oxd",
+      "authorship_tag": "ABX9TyOrrpeyQ70Qusk11v0CBuBv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1234,11 +1234,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_Pq3HbG_SxXC",
-        "outputId": "23c7e385-bc87-4c28-8a90-dbb0f4265bbe",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "_Pq3HbG_SxXC",
+        "outputId": "23c7e385-bc87-4c28-8a90-dbb0f4265bbe"
       },
       "source": [
         "# Set the random seed\n",
@@ -1478,12 +1478,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "e2fcx9D4wjQg",
-        "outputId": "7c119ee4-0bdb-441f-8484-f5f920343d56",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 282
-        }
+        },
+        "id": "e2fcx9D4wjQg",
+        "outputId": "7c119ee4-0bdb-441f-8484-f5f920343d56"
       },
       "source": [
         "# Check out our data\n",
@@ -1522,12 +1522,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YgVs_bJhzzE_",
-        "outputId": "55da264e-26a4-40ba-ac12-056c5227f44f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 282
-        }
+        },
+        "id": "YgVs_bJhzzE_",
+        "outputId": "55da264e-26a4-40ba-ac12-056c5227f44f"
       },
       "source": [
         "# Check the decision bounday for our latest model\n",
@@ -1558,15 +1558,278 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "ZFk3q5E1z614"
       },
       "source": [
+        "Let's try build our activation function with non-linear activation function."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "njk8AXGK0qRz",
+        "outputId": "c407bec8-4836-4b79-ad5d-7aa1b5af849d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Set random seed\n",
+        "\n",
+        "tf.random.set_seed(42)\n",
+        "\n",
+        "#1. Create a model with non-linear activation\n",
+        "model_5 = tf.keras.Sequential([\n",
+        "    tf.keras.layers.Dense(1, activation=tf.keras.activations.relu)\n",
+        "])\n",
+        "\n",
+        "# 2.Compile the model\n",
+        "model_5.compile(loss=tf.keras.losses.binary_crossentropy,\n",
+        "                optimizer=tf.keras.optimizers.Adam(),\n",
+        "                metrics=[\"accuracy\"])\n",
+        "\n",
+        "#3. Fit the model\n",
+        "history = model_5.fit(X, y, epochs=100)"
+      ],
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 4.2979 - accuracy: 0.4670\n",
+            "Epoch 2/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 4.2317 - accuracy: 0.4400\n",
+            "Epoch 3/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 4.1610 - accuracy: 0.4310\n",
+            "Epoch 4/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 4.1183 - accuracy: 0.4270\n",
+            "Epoch 5/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 4.0784 - accuracy: 0.4240\n",
+            "Epoch 6/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.9604 - accuracy: 0.4170\n",
+            "Epoch 7/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.8936 - accuracy: 0.4110\n",
+            "Epoch 8/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.7818 - accuracy: 0.4140\n",
+            "Epoch 9/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.7564 - accuracy: 0.4140\n",
+            "Epoch 10/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.7547 - accuracy: 0.4150\n",
+            "Epoch 11/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.7537 - accuracy: 0.4140\n",
+            "Epoch 12/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.7526 - accuracy: 0.4140\n",
+            "Epoch 13/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.7518 - accuracy: 0.4140\n",
+            "Epoch 14/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.7510 - accuracy: 0.4140\n",
+            "Epoch 15/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.7503 - accuracy: 0.4130\n",
+            "Epoch 16/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.7497 - accuracy: 0.4130\n",
+            "Epoch 17/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.7490 - accuracy: 0.4130\n",
+            "Epoch 18/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.7484 - accuracy: 0.4130\n",
+            "Epoch 19/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.7478 - accuracy: 0.4120\n",
+            "Epoch 20/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.7472 - accuracy: 0.4120\n",
+            "Epoch 21/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.7466 - accuracy: 0.4110\n",
+            "Epoch 22/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.7461 - accuracy: 0.4110\n",
+            "Epoch 23/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.7455 - accuracy: 0.4110\n",
+            "Epoch 24/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.7450 - accuracy: 0.4110\n",
+            "Epoch 25/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.7366 - accuracy: 0.4120\n",
+            "Epoch 26/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.7256 - accuracy: 0.4120\n",
+            "Epoch 27/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.7230 - accuracy: 0.4140\n",
+            "Epoch 28/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.7215 - accuracy: 0.4140\n",
+            "Epoch 29/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.7204 - accuracy: 0.4150\n",
+            "Epoch 30/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.7196 - accuracy: 0.4160\n",
+            "Epoch 31/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.7188 - accuracy: 0.4170\n",
+            "Epoch 32/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.7181 - accuracy: 0.4170\n",
+            "Epoch 33/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.7174 - accuracy: 0.4170\n",
+            "Epoch 34/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.7167 - accuracy: 0.4170\n",
+            "Epoch 35/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.7161 - accuracy: 0.4160\n",
+            "Epoch 36/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.7153 - accuracy: 0.4150\n",
+            "Epoch 37/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.7147 - accuracy: 0.4150\n",
+            "Epoch 38/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.7141 - accuracy: 0.4150\n",
+            "Epoch 39/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.7135 - accuracy: 0.4150\n",
+            "Epoch 40/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.7129 - accuracy: 0.4150\n",
+            "Epoch 41/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.7123 - accuracy: 0.4150\n",
+            "Epoch 42/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.7118 - accuracy: 0.4160\n",
+            "Epoch 43/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.7112 - accuracy: 0.4160\n",
+            "Epoch 44/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 3.7107 - accuracy: 0.4160\n",
+            "Epoch 45/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.7101 - accuracy: 0.4150\n",
+            "Epoch 46/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.7096 - accuracy: 0.4170\n",
+            "Epoch 47/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.7091 - accuracy: 0.4170\n",
+            "Epoch 48/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.7014 - accuracy: 0.4170\n",
+            "Epoch 49/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.6892 - accuracy: 0.4190\n",
+            "Epoch 50/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.6856 - accuracy: 0.4190\n",
+            "Epoch 51/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.6846 - accuracy: 0.4190\n",
+            "Epoch 52/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.6837 - accuracy: 0.4190\n",
+            "Epoch 53/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.6829 - accuracy: 0.4190\n",
+            "Epoch 54/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.6821 - accuracy: 0.4190\n",
+            "Epoch 55/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.6814 - accuracy: 0.4190\n",
+            "Epoch 56/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.6807 - accuracy: 0.4200\n",
+            "Epoch 57/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.6727 - accuracy: 0.4210\n",
+            "Epoch 58/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.6690 - accuracy: 0.4190\n",
+            "Epoch 59/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.6677 - accuracy: 0.4190\n",
+            "Epoch 60/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.6585 - accuracy: 0.4190\n",
+            "Epoch 61/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.6489 - accuracy: 0.4200\n",
+            "Epoch 62/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.6330 - accuracy: 0.4190\n",
+            "Epoch 63/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.6282 - accuracy: 0.4200\n",
+            "Epoch 64/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.6162 - accuracy: 0.4220\n",
+            "Epoch 65/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.6062 - accuracy: 0.4240\n",
+            "Epoch 66/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.6031 - accuracy: 0.4260\n",
+            "Epoch 67/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.6012 - accuracy: 0.4280\n",
+            "Epoch 68/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.5999 - accuracy: 0.4280\n",
+            "Epoch 69/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.5904 - accuracy: 0.4290\n",
+            "Epoch 70/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.5858 - accuracy: 0.4300\n",
+            "Epoch 71/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.5846 - accuracy: 0.4300\n",
+            "Epoch 72/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.5836 - accuracy: 0.4300\n",
+            "Epoch 73/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.5826 - accuracy: 0.4310\n",
+            "Epoch 74/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.5817 - accuracy: 0.4330\n",
+            "Epoch 75/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.5656 - accuracy: 0.4360\n",
+            "Epoch 76/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.5355 - accuracy: 0.4410\n",
+            "Epoch 77/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.5335 - accuracy: 0.4410\n",
+            "Epoch 78/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.5319 - accuracy: 0.4420\n",
+            "Epoch 79/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.5306 - accuracy: 0.4420\n",
+            "Epoch 80/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.5208 - accuracy: 0.4420\n",
+            "Epoch 81/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.5172 - accuracy: 0.4420\n",
+            "Epoch 82/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.5157 - accuracy: 0.4430\n",
+            "Epoch 83/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.5144 - accuracy: 0.4450\n",
+            "Epoch 84/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.5132 - accuracy: 0.4450\n",
+            "Epoch 85/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.5043 - accuracy: 0.4460\n",
+            "Epoch 86/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.5002 - accuracy: 0.4470\n",
+            "Epoch 87/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.4905 - accuracy: 0.4470\n",
+            "Epoch 88/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.4788 - accuracy: 0.4470\n",
+            "Epoch 89/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.4661 - accuracy: 0.4470\n",
+            "Epoch 90/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.4452 - accuracy: 0.4490\n",
+            "Epoch 91/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.4198 - accuracy: 0.4560\n",
+            "Epoch 92/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.4176 - accuracy: 0.4550\n",
+            "Epoch 93/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.4072 - accuracy: 0.4580\n",
+            "Epoch 94/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.4036 - accuracy: 0.4580\n",
+            "Epoch 95/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.3944 - accuracy: 0.4590\n",
+            "Epoch 96/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.3290 - accuracy: 0.4590\n",
+            "Epoch 97/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.2727 - accuracy: 0.4600\n",
+            "Epoch 98/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.2636 - accuracy: 0.4580\n",
+            "Epoch 99/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.2509 - accuracy: 0.4570\n",
+            "Epoch 100/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 3.2459 - accuracy: 0.4570\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3Cfpdxk91Sph",
+        "outputId": "81dd45e5-c864-44ac-c52e-df44550e784b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
         ""
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0.75424625, 0.23148074])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 59
+        }
+      ]
     }
   ]
 }
