87. More classification evaluation checks

--- a/02_neural_network_classification_with_tensorflow.ipynb
+++ b/02_neural_network_classification_with_tensorflow.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "02_neural_network_classification_with_tensorflow",
       "provenance": [],
-      "authorship_tag": "ABX9TyNdrDQM/h7Y5629r7OKqSuE",
+      "authorship_tag": "ABX9TyNMEx3kuHdlfKjkpS+GCpLw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3782,11 +3782,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "71gFUFfcejua",
-        "outputId": "7d4066d1-d209-427d-869f-60767ab744f8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "71gFUFfcejua",
+        "outputId": "7d4066d1-d209-427d-869f-60767ab744f8"
       },
       "source": [
         "# Let's try using a higher *ideal* learning rate wth the same model\n",
@@ -3874,11 +3874,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9MTSIQKVfcLf",
-        "outputId": "68a93b32-3706-4de4-8823-95a1f4d9e55a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9MTSIQKVfcLf",
+        "outputId": "68a93b32-3706-4de4-8823-95a1f4d9e55a"
       },
       "source": [
         "# Evaluate model 10 on test dataset\n",
@@ -3910,11 +3910,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wlVXVsN1f3o_",
-        "outputId": "71ca5e45-c010-44a8-867d-11c0c412a128",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "wlVXVsN1f3o_",
+        "outputId": "71ca5e45-c010-44a8-867d-11c0c412a128"
       },
       "source": [
         "# Evaluate model_8 on test dataset\n",
@@ -3946,12 +3946,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BMOr9iJQgAQg",
-        "outputId": "5fa73c01-a969-447e-8fee-0c9a7e47d913",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
-        }
+        },
+        "id": "BMOr9iJQgAQg",
+        "outputId": "5fa73c01-a969-447e-8fee-0c9a7e47d913"
       },
       "source": [
         "# Plot the decision boundary for the training and test sets\n",
@@ -3988,6 +3988,71 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "kmCSszlxgk6G"
+      },
+      "source": [
+        "## More classification evaluation methods\n",
+        "\n",
+        "Alongside visualizing our models results as much as possible, there are handful of other classification evaluation methods and metrics you should be familiar with :\n",
+        "* Accuracy\n",
+        "* Precision\n",
+        "* Recall\n",
+        "* F1-score\n",
+        "* Confusion matrix\n",
+        "* Classification report(from scikit-learn) [https://scikit-learn.org/stable/modules/generated/sklearn.metrics.classification_report.html](https://scikit-learn.org/stable/modules/generated/sklearn.metrics.classification_report.html)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2iDsp8USp1Iq",
+        "outputId": "f47523cd-8987-4ad5-f0d4-bbe3bd7fd91b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Check the accuracy of our model\n",
+        "loss, accuracy = model_10.evaluate(X_test, y_test)\n",
+        "print(f\"Model loss on the test set: {loss}\")\n",
+        "print(f\"Model accuracy on the test set : {(accuracy * 100) : .2f} %\")"
+      ],
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "7/7 [==============================] - 0s 2ms/step - loss: 0.0574 - accuracy: 0.9900\n",
+            "Model loss on the test set: 0.05740184709429741\n",
+            "Model accuracy on the test set :  99.00 %\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JQXOlZxXqNly"
+      },
+      "source": [
+        "### How about a confusion matrix"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JbTk4bYaqWuo"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
